[gd_scene load_steps=6 format=3 uid="uid://bfvw74l4xerng"]

[ext_resource type="Script" path="res://test.gd" id="1_xloef"]
[ext_resource type="Script" path="res://Components/health_component.gd" id="2_hxqmr"]
[ext_resource type="Script" path="res://Components/velocity_component.gd" id="3_kshyq"]
[ext_resource type="Script" path="res://Components/hitbox_component.gd" id="4_eo6j0"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_u8o6n"]

[node name="Test" type="CharacterBody2D"]
script = ExtResource("1_xloef")

[node name="HealthComponent" type="Node" parent="."]
script = ExtResource("2_hxqmr")

[node name="VelocityComponent" type="Node" parent="." node_paths=PackedStringArray("character_body")]
script = ExtResource("3_kshyq")
character_body = NodePath("..")

[node name="HitBoxComponent" type="Area2D" parent="."]
script = ExtResource("4_eo6j0")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBoxComponent"]
shape = SubResource("RectangleShape2D_u8o6n")
